# segmentor

./: .gitignore  .gitmodules  README.md  profile_output.prof  pyproject.toml
archive/: .gitignore  README.md  preprocess.py  window_resample.py
archive/BowelGraph/: main.py  score.py
archive/MAE/: finetune.py  pl_wrappers.py  test.py  train.py
archive/MAE/configs/: default.yaml  finetune_default.yaml
archive/UNet/: train.py
archive/UNet/configs/: OLD_defaults.yaml  comfy-sweep-189.yaml  default.yaml  divine-sweep-40.yaml  leafy-sweep-171.yaml
archive/UNet/model/: buildingblocks.py  model.py  pl_wrappers.py  unified_focal_loss.py
archive/UNet/scripts/: LOO.sh  ablate_rotation.sh  train_top3_sweep_seeds.sh
archive/ViT/: pl_wrapper.py  train.py
archive/ViT/ViT_core/: configs.py  infer.py  losses.py  models.py  train.py
archive/ViT/configs/: defaults.yaml  test.yaml  v1.yaml
archive/utils/: avg_results.py  datasets.py  eval.py  graph_to_img.py  inference.py  test.py  utils.py
data/: filter_totalsegmentor.py  generate_phantom.py  generate_phantoms.sh  nnunet_prep.py  nnunet_prep_multilabels.py
notebooks/: achci_tsp.py  aux_plots.ipynb  bayesian_optimization.py  compute_metrics.ipynb  concorde_tsp.py  graph_approach.py  grl_pathtracking.py  rag.pkl  res_1.jsonl  start.ipynb
plots/: dilation_comparison.py  dilation_time_non_repeated.csv  dilation_time_repeated.csv
scripts/: cpr_implementation.py  download.sh  mri_motility_inference.py  run_achci.sh  run_concorde.sh  setup.sh  slurm_base.sh  slurm_rleval.sh  slurm_setup.sh
scripts/nnunet/: run_nnunet.sh
slic/: pyproject.toml  slic.py  utils.py
src/: train.py  train_jax.py
src/navigator/: __init__.py  __main__.py  config.py  dataset.py  environment.py  exploration.py  main.py  normalization.py  perfect_run_test.py  train.py  train_gym.py  train_jax.py  utils.py
src/navigator2/: beta.py  environment.py  models.py  train.py
src/segmentor/: README.md  model.py  rope.py
src/utils/: medutils.py  plotting.py  utils.py
(+17 files in other folders)
