[project]
name = "segmentor"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "monai[all]",
    "torch",
    "torchvision",
    "lightning",
    "nibabel",
    "pandas",
    "tqdm",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "pyvista",
]
