[project]
name = "segmentor"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "monai[all]",
    "torch",
    "torchvision",
    "lightning",
    "nibabel",
    "pandas",
    "tqdm",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "pyvista",
    "wandb"
]


[tool.ruff]
line-length = 120
fix = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'"},
]