[project]
name = "segmentor"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "monai[all]",
    "torch",
    "torchvision",
    "lightning",
    "nibabel",
    "pandas",
    "tqdm",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "pyvista[jupyter]",
    "wandb",
    "kimimaro",
    "networkx",
    "rustworkx"
]

[project.optional-dependencies]
cuda = [
    "cupy",
    "cucim-cu12",
]

[tool.ruff]
line-length = 100
fix = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu128", marker = "platform_system != 'Darwin'"},
]

[tool.uv.workspace]
members = ["slic"]
